--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formily/antd-v5": "^1.1.9",
+    "@formily/core": "^2.3.1",
+    "@formily/react": "^2.3.1",
+    "antd": "^5.16.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
