--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formily/antd-v5": "^1.1.9",
     "@formily/core": "^2.3.1",
     "@formily/react": "^2.3.1",
+    "@formily/reactive": "^2.3.1",
     "antd": "^5.16.1",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
